--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
     </p>
     <p>Computer's Choice: </p>
     <br>
-    <div id="computer">array choice here but not displaying</div>
+    <div id="computer"></div>
+
+     <div id="winlose"></div>
     <script src="./js/main.js"></script>
+  
   </body>
 </html>
