neaten up and add color

--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
       <h3 class='bottomline'>See if you can beat the computer!</h3>
     </div>
 
-    <p>
-      <hr>
+
+    <hr>
+    <section id="game">
+      <!-- Need pictures or something nicer -->
       <button id="rock" class="choice">Rock</button>
       <button id="paper" class="choice">Paper</button>
       <button id="scissors" class="choice">Scissors</button>
-    </p>
+    </section>
     <section class='lower' id='results'>
       <div id="winlose">
         <h4 id="user">User: </h4>
