add pics spruce up page

--- a/index.html
+++ b/index.html
@@ -17,10 +17,9 @@
 
     <hr>
     <section id="game">
-      <!-- Need pictures or something nicer -->
-      <button id="rock" class="choice">Rock</button>
-      <button id="paper" class="choice">Paper</button>
-      <button id="scissors" class="choice">Scissors</button>
+      <img src="./images/rock.gif" alt="rock" class="choice" id="rock" />
+      <img src="./images/paper.gif" alt="paper" class="choice" id="paper" />
+      <img src="./images/scissors.gif" alt="scissors" class="choice" id="scissors" />
     </section>
     <section class='lower' id='results'>
       <div id="winlose">
@@ -29,7 +28,12 @@
         <hr />
         <h4 id="winner">Result: </h4>
       </div>
+      <br>
     </section>
+
+    <footer class='footer'>
+      <p>&copy; Created by FuzzDuckie Enterprise 2018</p>
+    </footer>
     <script src="./js/main.js"></script>
 
   </body>
